# car-rental-fastapi-vite

./: .gitignore  .mcp.json  CLAUDE.md  MCP_SETUP.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  ci.yml.disabled  test.yml
apps/backend/: .flake8  Dockerfile  debug_mock.py  package.json  pyproject.toml  pytest.ini  requirements-ci.txt  requirements.txt
apps/backend/app/: config.py  main.py
apps/backend/app/domain/: base.py
apps/backend/app/domain/entities/: __init__.py  app_settings.py  booking.py  car.py  contract.py  installment.py  offer.py  user.py
apps/backend/app/domain/repositories/: car_repository.py  contract_repository.py  user_repository.py
apps/backend/app/domain/services/: __init__.py  offer_pricing_service.py  pricing_service.py  wallet_service.py
apps/backend/app/domain/value_objects/: __init__.py  date_range.py  location.py  money.py
apps/backend/app/infrastructure/: dependencies.py  firebase_collections.py
apps/backend/app/infrastructure/persistence/: converters.py  mock_car_repository.py  mock_contract_repository.py  mock_user_repository.py
apps/backend/app/infrastructure/persistence/firebase/: __init__.py  car_repository_impl.py  contract_repository_impl.py  firebase_client.py  user_repository_impl.py
apps/backend/app/interfaces/: __init__.py
apps/backend/app/interfaces/api/v1/: __init__.py  bookings.py  cars.py  contracts.py  users.py
apps/backend/app/interfaces/middleware/: error_handler.py
apps/backend/tests/: conftest.py  test_cars.py  test_contracts.py  test_main.py  test_users.py
apps/frontend/: Dockerfile  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/components/: Layout.tsx
apps/frontend/src/components/ui/: toaster.tsx
apps/frontend/src/pages/: BookingsPage.tsx  CarsPage.tsx  ContractsPage.tsx  HomePage.tsx
apps/frontend/src/test/: HomePage.test.tsx  Layout.test.tsx  setup.ts
